Clean objs with ${RM} instead of -rm, to suppress warnings.
On GNU make ${RM} expands to 'rm -f' which doesn't complain
about being asked to remove non-existent files. 'make clean'
still creates the .d files before cleaning though.

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -181,7 +181,8 @@ check: all
 
 # Remove all targets.
 clean:
-	-rm ${ALL_ASM} ${ALL_OBJS} ${ALL_DEPS} ${ALL_TARGETS}
+	${RM} ${ALL_ASM} ${ALL_OBJS} ${ALL_DEPS}
+	${RM} ${ALL_TARGETS}
 	-rmdir ${WORKDIR}/x86 ${WORKDIR}
 
 # Make everything depend on changes in the Makefile
