Add a dummy 'check' target to the unix makefile.
This doesn't do anything, just prevents an error return if a
script calls 'make check' check.

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -146,6 +146,8 @@ ALL_TARGETS:= ${LIBDAALABASE_TARGET} ${LIBDAALADEC_TARGET} \
 # Everything (default)
 all: ${ALL_TARGETS}
 
+check: all
+
 # libdaalabase
 ${LIBDAALABASE_TARGET}: ${LIBDAALABASE_OBJS}
 	mkdir -p ${TARGETLIBDIR}
