Hook up test_coef_coder to make check.

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -1,14 +1,17 @@
 # NOTE: This Makefile requires GNU make
 # Location to put the targets.
 TARGETBINDIR = .
+TESTBINDIR = tests
 TARGETLIBDIR = .
 # Name of the targets
 LIBDAALABASE_TARGET = libdaalabase.a
 LIBDAALAENC_TARGET = libdaalaenc.a
 LIBDAALADEC_TARGET = libdaaladec.a
 DUMP_VIDEO_TARGET = dump_video
-PLAYER_EXAMPLE_TARGET = player_example
 ENCODER_EXAMPLE_TARGET = encoder_example
+PLAYER_EXAMPLE_TARGET = player_example
+# Test targets
+TEST_COEF_CODER_TARGET = test_coef_coder
 # The compiler to use
 CC = gcc
 # The command to use to generate dependency information
@@ -54,10 +57,13 @@ ifeq ($(findstring -DOD_DUMP_IMAGES,${CFLAGS}),-DOD_DUMP_IMAGES)
     LIBS += -lpng -lz
 endif
 
+TEST_COEF_CODER_LIBS = -lm
+
 # ANYTHING BELOW THIS LINE PROBABLY DOES NOT NEED EDITING
 CINCLUDE := -I../include ${CINCLUDE}
 LIBSRCDIR = ../src
 BINSRCDIR = ../examples
+TESTSRCDIR = ${LIBSRCDIR}
 WORKDIR = objs
 
 # C source file lists
@@ -117,6 +123,8 @@ DUMP_VIDEO_CSOURCES = dump_video.c
 ENCODER_EXAMPLE_CSOURCES = encoder_example.c
 PLAYER_EXAMPLE_CSOURCES = player_example.c
 
+TEST_COEF_CODER_CSOURCES = tests/test_coef_coder.c
+
 # Create object file list.
 LIBDAALABASE_OBJS:= ${LIBDAALABASE_CSOURCES:%.c=${WORKDIR}/%.o}
 LIBDAALABASE_ASMS:= ${LIBDAALABASE_OBJS:%.o=%.s}
@@ -130,8 +138,10 @@ LIBDAALAENC_DEPS:= ${LIBDAALAENC_OBJS:%.o=%.d}
 DUMP_VIDEO_OBJS:= ${DUMP_VIDEO_CSOURCES:%.c=${WORKDIR}/%.o}
 ENCODER_EXAMPLE_OBJS:= ${ENCODER_EXAMPLE_CSOURCES:%.c=${WORKDIR}/%.o}
 PLAYER_EXAMPLE_OBJS:= ${PLAYER_EXAMPLE_CSOURCES:%.c=${WORKDIR}/%.o}
+TEST_COEF_CODER_OBJS:= ${TEST_COEF_CODER_CSOURCES:%.c=${WORKDIR}/%.o}
 ALL_OBJS:= ${LIBDAALABASE_OBJS} ${LIBDAALADEC_OBJS} ${LIBDAALAENC_OBJS} \
- ${DUMP_VIDEO_OBJS} ${ENCODER_EXAMPLE_OBJS} ${PLAYER_EXAMPLE_OBJS}
+ ${DUMP_VIDEO_OBJS} ${ENCODER_EXAMPLE_OBJS} ${PLAYER_EXAMPLE_OBJS} \
+ ${TEST_COEF_CODER}
 # Create the dependency file list
 ALL_DEPS:= ${ALL_OBJS:%.o=%.d}
 # Prepend source path to file names.
@@ -144,9 +154,10 @@ LIBDAALAENC_CHEADERS:= ${LIBDAALAENC_CHEADERS:%=${LIBSRCDIR}/%}
 DUMP_VIDEO_CSOURCES:= ${DUMP_VIDEO_CSOURCES:%=${BINSRCDIR}/%}
 ENCODER_EXAMPLE_CSOURCES:= ${ENCODER_EXAMPLE_CSOURCES:%=${BINSRCDIR}/%}
 PLAYER_EXAMPLE_CSOURCES:= ${PLAYER_EXAMPLE_CSOURCES:%=${BINSRCDIR}/%}
+TEST_COEF_CODER_CSOURCES:= ${TEST_COEF_CODER_CSOURCES:%=${TESTSRCDIR}/%}
 ALL_CSOURCES:= ${LIBDAALABASE_CSOURCES} ${LIBDAALADEC_CSOURCES} \
  ${LIBDAALAENC_CSOURCES} ${DUMP_VIDEO_CSOURCES} ${ENCODER_EXAMPLE_CSOURCES} \
- ${PLAYER_EXAMPLE_CSOURCES}
+ ${PLAYER_EXAMPLE_CSOURCES} ${TEST_COEF_CODER_CSOURCES}
 # Prepand target path to file names.
 LIBDAALABASE_TARGET:= ${TARGETLIBDIR}/${LIBDAALABASE_TARGET}
 LIBDAALADEC_TARGET:= ${TARGETLIBDIR}/${LIBDAALADEC_TARGET}
@@ -154,15 +165,16 @@ LIBDAALAENC_TARGET:= ${TARGETLIBDIR}/${LIBDAALAENC_TARGET}
 DUMP_VIDEO_TARGET:= ${TARGETBINDIR}/${DUMP_VIDEO_TARGET}
 ENCODER_EXAMPLE_TARGET:= ${TARGETBINDIR}/${ENCODER_EXAMPLE_TARGET}
 PLAYER_EXAMPLE_TARGET:= ${TARGETBINDIR}/${PLAYER_EXAMPLE_TARGET}
+# Prepend test path to file names.
+TEST_COEF_CODER_TARGET:= ${TESTBINDIR}/${TEST_COEF_CODER_TARGET}
+# Complete set of targets
 ALL_TARGETS:= ${LIBDAALABASE_TARGET} ${LIBDAALADEC_TARGET} \
  ${LIBDAALAENC_TARGET} ${DUMP_VIDEO_TARGET} ${ENCODER_EXAMPLE_TARGET} \
- ${PLAYER_EXAMPLE_TARGET}
+ ${PLAYER_EXAMPLE_TARGET} ${TEST_COEF_CODER_TARGET}
 
 # Targets:
 # Everything (default)
 all: ${ALL_TARGETS}
-
-check: all
 
 # libdaalabase
 ${LIBDAALABASE_TARGET}: ${LIBDAALABASE_OBJS}
@@ -200,12 +212,18 @@ ${PLAYER_EXAMPLE_TARGET}: ${PLAYER_EXAMPLE_OBJS} ${LIBDAALABASE_TARGET} \
 	${CC} ${CFLAGS} -o $@ ${PLAYER_EXAMPLE_OBJS} ${LIBS} \
          ${LIBDAALADEC_TARGET} ${LIBDAALABASE_TARGET}
 
+# test_coef_coder
+${TEST_COEF_CODER_TARGET}: ${TEST_COEF_CODER_OBJS}
+	mkdir -p ${TESTBINDIR}
+	${CC} ${CFLAGS} ${TEST_COEF_CODER_OBJS} ${TEST_COEF_CODER_LIBS} -o $@
+
 # Assembly listing
 ALL_ASM := ${ALL_OBJS:%.o=%.s}
 asm: ${ALL_ASM}
 
 # check that build is complete
 check: all
+	${TEST_COEF_CODER_TARGET}
 
 # Remove all targets.
 clean:
@@ -228,8 +246,10 @@ ${WORKDIR}/%.d: ${LIBSRCDIR}/%.c
 	${MAKEDEPEND} ${CINCLUDE} ${CFLAGS} $< -MT ${@:%.d=%.s} >> $@
 	${MAKEDEPEND} ${CINCLUDE} ${CFLAGS} $< -MT $@ >> $@
 ${WORKDIR}/%.s: ${LIBSRCDIR}/%.c
+	mkdir -p ${dir $@}
 	${CC} ${CINCLUDE} ${CFLAGS} -S -o $@ $<
 ${WORKDIR}/%.o: ${LIBSRCDIR}/%.c
+	mkdir -p ${dir $@}
 	${CC} ${CINCLUDE} ${CFLAGS} -c -o $@ $<
 
 ${WORKDIR}/%.d : ${BINSRCDIR}/%.c
