Fix the entropy decoder.
The original import from Opus removed a few too many parentheses
 when stripping the useless IMUL32 macro.
Also import ectest, and hook it up to make check.

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -11,6 +11,7 @@ DUMP_VIDEO_TARGET = dump_video
 ENCODER_EXAMPLE_TARGET = encoder_example
 PLAYER_EXAMPLE_TARGET = player_example
 # Test targets
+ECTEST_TARGET = ectest
 TEST_COEF_CODER_TARGET = test_coef_coder
 # The compiler to use
 CC = gcc
@@ -44,7 +45,6 @@ ifneq (,$(findstring 86,${HOST}))
 CFLAGS += -DOD_X86ASM
 #CFLAGS += -march=native
 #CFLAGS += -O3 -funroll-loops -fforce-addr -msse3
-CFLAGS += -O0
 else ifneq (,$(findstring arm,${HOST}))
 CFLAGS += -DOD_ARMASM
 #CFLAGS += -march=armv7
@@ -57,6 +57,7 @@ ifeq ($(findstring -DOD_DUMP_IMAGES,${CFLAGS}),-DOD_DUMP_IMAGES)
     LIBS += -lpng -lz
 endif
 
+ECTEST_LIBS = -lm
 TEST_COEF_CODER_LIBS = -lm
 
 # ANYTHING BELOW THIS LINE PROBABLY DOES NOT NEED EDITING
@@ -123,6 +124,7 @@ DUMP_VIDEO_CSOURCES = dump_video.c
 ENCODER_EXAMPLE_CSOURCES = encoder_example.c
 PLAYER_EXAMPLE_CSOURCES = player_example.c
 
+ECTEST_CSOURCES = tests/ectest.c
 TEST_COEF_CODER_CSOURCES = tests/test_coef_coder.c
 
 # Create object file list.
@@ -138,10 +140,11 @@ LIBDAALAENC_DEPS:= ${LIBDAALAENC_OBJS:%.o=%.d}
 DUMP_VIDEO_OBJS:= ${DUMP_VIDEO_CSOURCES:%.c=${WORKDIR}/%.o}
 ENCODER_EXAMPLE_OBJS:= ${ENCODER_EXAMPLE_CSOURCES:%.c=${WORKDIR}/%.o}
 PLAYER_EXAMPLE_OBJS:= ${PLAYER_EXAMPLE_CSOURCES:%.c=${WORKDIR}/%.o}
+ECTEST_OBJS:= ${ECTEST_CSOURCES:%.c=${WORKDIR}/%.o}
 TEST_COEF_CODER_OBJS:= ${TEST_COEF_CODER_CSOURCES:%.c=${WORKDIR}/%.o}
 ALL_OBJS:= ${LIBDAALABASE_OBJS} ${LIBDAALADEC_OBJS} ${LIBDAALAENC_OBJS} \
  ${DUMP_VIDEO_OBJS} ${ENCODER_EXAMPLE_OBJS} ${PLAYER_EXAMPLE_OBJS} \
- ${TEST_COEF_CODER_OBJS}
+ ${ECTEST_OBJS} ${TEST_COEF_CODER_OBJS}
 # Create the dependency file list
 ALL_DEPS:= ${ALL_OBJS:%.o=%.d}
 # Prepend source path to file names.
@@ -154,10 +157,11 @@ LIBDAALAENC_CHEADERS:= ${LIBDAALAENC_CHEADERS:%=${LIBSRCDIR}/%}
 DUMP_VIDEO_CSOURCES:= ${DUMP_VIDEO_CSOURCES:%=${BINSRCDIR}/%}
 ENCODER_EXAMPLE_CSOURCES:= ${ENCODER_EXAMPLE_CSOURCES:%=${BINSRCDIR}/%}
 PLAYER_EXAMPLE_CSOURCES:= ${PLAYER_EXAMPLE_CSOURCES:%=${BINSRCDIR}/%}
+ECTEST_CSOURCES:= ${ECTEST_CSOURCES:%=${TESTSRCDIR}/%}
 TEST_COEF_CODER_CSOURCES:= ${TEST_COEF_CODER_CSOURCES:%=${TESTSRCDIR}/%}
 ALL_CSOURCES:= ${LIBDAALABASE_CSOURCES} ${LIBDAALADEC_CSOURCES} \
  ${LIBDAALAENC_CSOURCES} ${DUMP_VIDEO_CSOURCES} ${ENCODER_EXAMPLE_CSOURCES} \
- ${PLAYER_EXAMPLE_CSOURCES} ${TEST_COEF_CODER_CSOURCES}
+ ${PLAYER_EXAMPLE_CSOURCES} ${ECTEST_CSOURCES} ${TEST_COEF_CODER_CSOURCES}
 # Prepand target path to file names.
 LIBDAALABASE_TARGET:= ${TARGETLIBDIR}/${LIBDAALABASE_TARGET}
 LIBDAALADEC_TARGET:= ${TARGETLIBDIR}/${LIBDAALADEC_TARGET}
@@ -166,11 +170,12 @@ DUMP_VIDEO_TARGET:= ${TARGETBINDIR}/${DUMP_VIDEO_TARGET}
 ENCODER_EXAMPLE_TARGET:= ${TARGETBINDIR}/${ENCODER_EXAMPLE_TARGET}
 PLAYER_EXAMPLE_TARGET:= ${TARGETBINDIR}/${PLAYER_EXAMPLE_TARGET}
 # Prepend test path to file names.
+ECTEST_TARGET:= ${TESTBINDIR}/${ECTEST_TARGET}
 TEST_COEF_CODER_TARGET:= ${TESTBINDIR}/${TEST_COEF_CODER_TARGET}
 # Complete set of targets
 ALL_TARGETS:= ${LIBDAALABASE_TARGET} ${LIBDAALADEC_TARGET} \
  ${LIBDAALAENC_TARGET} ${DUMP_VIDEO_TARGET} ${ENCODER_EXAMPLE_TARGET} \
- ${PLAYER_EXAMPLE_TARGET} ${TEST_COEF_CODER_TARGET}
+ ${PLAYER_EXAMPLE_TARGET} ${ECTEST_TARGET} ${TEST_COEF_CODER_TARGET}
 
 # Targets:
 # Everything (default)
@@ -212,6 +217,11 @@ ${PLAYER_EXAMPLE_TARGET}: ${PLAYER_EXAMPLE_OBJS} ${LIBDAALABASE_TARGET} \
 	${CC} ${CFLAGS} -o $@ ${PLAYER_EXAMPLE_OBJS} ${LIBS} \
          ${LIBDAALADEC_TARGET} ${LIBDAALABASE_TARGET}
 
+# ectest
+${ECTEST_TARGET}: ${ECTEST_OBJS}
+	mkdir -p ${TESTBINDIR}
+	${CC} ${CFLAGS} ${ECTEST_OBJS} ${ECTEST_LIBS} -o $@
+
 # test_coef_coder
 ${TEST_COEF_CODER_TARGET}: ${TEST_COEF_CODER_OBJS}
 	mkdir -p ${TESTBINDIR}
@@ -223,6 +233,7 @@ asm: ${ALL_ASM}
 
 # check that build is complete
 check: all
+	${ECTEST_TARGET}
 	${TEST_COEF_CODER_TARGET}
 
 # Remove all targets.
