Add a few assertions to the entropy coder.
They are now enabled by default in the Makefile.
Also fixes the documentation in a few places, and expands the _ft
 versions of the functions to allow _ft up to 32768 without 16-bit
 int overflow.

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -30,6 +30,7 @@ CFLAGS += -fvisibility=hidden
 #  -ffast-math, or additional flags, depending on your system and compiler.
 # The -g flag will generally include debugging information.
 CFLAGS += -g
+CFLAGS += -DOD_ENABLE_ASSERTIONS
 #CFLAGS += -DOD_CHECKASM
 #CFLAGS += -DOD_DUMP_IMAGES
 #CFLAGS += -DOD_ANIMATE
