init_intra_xform can now properly output the probability model

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -82,7 +82,9 @@ vidinput.c
 
 IIX_LIB_CSOURCES = \
 filter.c \
-newdct.c
+newdct.c \
+intra.c \
+intradata.c
 
 IIX_LDFLAGS = -ltheoradec -logg -lpng -lz -lm
 
