Move gen_cdf to tools.
Also adds Makefile support for it.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -94,14 +94,30 @@ IIX_CSOURCES:=${IIX_LOCAL_CSOURCES} ${IIX_LOCAL_CSOURCES:%=${LIBSRCDIR}/%}
 IIX_TARGET:=init_intra_xform
 
 
-ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PIM_OBJS} ${IIM_OBJS} ${IIX_OBJS}
+#gen_cdf
+GEN_CDF_LOCAL_CSOURCES = \
+gen_cdf.c
+
+GEN_CDF_LIB_CSOURCES =
+
+GEN_CDF_LDFLAGS = -lm
+
+GEN_CDF_OBJS:=${GEN_CDF_LOCAL_CSOURCES} ${GEN_CDF_LIB_CSOURCES}
+GEN_CDF_OBJS:=${GEN_CDF_OBJS:%.c=${WORKDIR}/%.o}
+GEN_CDF_CSOURCES:=${GEN_CDF_LOCAL_CSOURCES} \
+ ${GEN_CDF_LOCAL_CSOURCES:%=${LIBSRCDIR}/%}
+GEN_CDF_TARGET:=gen_cdf
+
+
+ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PIM_OBJS} ${IIM_OBJS} ${IIX_OBJS} \
+ ${GEN_CDF_OBJS}
 
 ALL_ASMS:=${ALL_OBJS:%.o=%.s}
 
 ALL_DEPS:=${ALL_OBJS:%.o=%.d}
 
 ALL_TARGETS:=${P2Y_TARGET} ${Y2P_TARGET} \
- ${PIM_TARGET} ${IIM_TARGET} ${IIX_TARGET}
+ ${PIM_TARGET} ${IIM_TARGET} ${IIX_TARGET} ${GEN_CDF_TARGET}
 
 all: ${ALL_TARGETS}
 
@@ -128,6 +144,9 @@ ${IIM_TARGET}: ${IIM_OBJS}
 
 ${IIX_TARGET}: ${IIX_OBJS}
 	${CC} ${CFLAGS} ${IIX_OBJS} ${IIX_LDFLAGS} -o $@
+
+${GEN_CDF_TARGET}: ${GEN_CDF_OBJS}
+	${CC} ${CFLAGS} ${GEN_CDF_OBJS} ${GEN_CDF_LDFLAGS} -o $@
 
 ${ALL_OBJS} ${ALL_ASMS} ${ALL_DEPS} ${ALL_TARGETS}: Makefile
 
