--- a/unix/Makefile
+++ b/unix/Makefile
@@ -43,7 +43,7 @@ MAKEDEPEND = gcc -MM
 # The location of include files.
 # Modify these to point to your Ogg and Vorbis include directories if they are
 #  not installed in a standard location.
-CINCLUDE = `sdl-config --cflags`
+CINCLUDE = `sdl-config --cflags` `pkg-config vorbisenc ogg --cflags`
 # These are gcc-only, but not actually critical.
 # Extra compilation flags.
 # You may get speed increases by including flags such as -O2 or -O3 or
@@ -70,7 +70,7 @@ endif
 
 # Libraries to link with, and the location of library files.
 # Add -lpng -lz if you want to use -DOD_DUMP_IMAGES.
-LIBS = -logg -lvorbis -lvorbisenc `sdl-config --libs` -lm
+LIBS = `pkg-config ogg vorbisenc --libs` `sdl-config --libs` -lm
 ifeq ($(findstring -DOD_DUMP_IMAGES,${CFLAGS}),-DOD_DUMP_IMAGES)
     LIBS += -lpng -lz
 endif
