Makefile support for dump_psnrhvs.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -63,6 +63,21 @@ Y2P_OBJS:=${Y2P_OBJS:%.c=${WORKDIR}/%.o}
 Y2P_CSOURCES:=${Y2P_LOCAL_CSOURCES} ${Y2P_LOCAL_CSOURCES:%=${LIBSRCDIR}/%}
 Y2P_TARGET:=y4m2png
 
+#dump_psnrhvs
+PSNRHVS_LOCAL_CSOURCES = \
+vidinput.c \
+newdct.c \
+dump_psnrhvs.c \
+
+PSNRHVS_LIB_CSOURCES =
+
+PSNRHVS_LDFLAGS = `pkg-config theoradec ogg libpng --libs` -lm
+
+PSNRHVS_OBJS:=${PSNRHVS_LOCAL_CSOURCES} ${PSNRHVS_LIB_CSOURCES}
+PSNRHVS_OBJS:=${PSNRHVS_OBJS:%.c=${WORKDIR}/%.o}
+PSNRHVS_CSOURCES:=${PSNRHVS_LOCAL_CSOURCES} ${PSNRHVS_LOCAL_CSOURCES:%=${LIBSRCDIR}/%}
+PSNRHVS_TARGET:=dump_psnrhvs
+
 #block_size_analysis
 BSIZE_LOCAL_CSOURCES = \
 block_size_analysis.c \
@@ -215,14 +230,14 @@ GEN_CDF_CSOURCES:=${GEN_CDF_LOCAL_CSOURCES} \
 GEN_CDF_TARGET:=gen_cdf
 
 
-ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PIM_OBJS} ${IIM_OBJS} ${IIX_OBJS} \
+ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PSNRHVS_OBJS} ${PIM_OBJS} ${IIM_OBJS} ${IIX_OBJS} \
  ${GEN_CDF_OBJS} ${IS_OBJS} ${IP_OBJS} ${T_OBJS}
 
 ALL_ASMS:=${ALL_OBJS:%.o=%.s}
 
 ALL_DEPS:=${ALL_OBJS:%.o=%.d}
 
-ALL_TARGETS:=${P2Y_TARGET} ${Y2P_TARGET} \
+ALL_TARGETS:=${P2Y_TARGET} ${Y2P_TARGET} ${PSNRHVS_TARGET} \
  ${PIM_TARGET} ${IIM_TARGET} ${IIX_TARGET} ${GEN_CDF_TARGET} \
  ${IS_TARGET} ${IP_TARGET} ${T_TARGET} ${BSIZE_TARGET}
 
@@ -245,6 +260,9 @@ ${P2Y_TARGET}: ${P2Y_OBJS}
 
 ${Y2P_TARGET}: ${Y2P_OBJS}
 	${CC} ${CFLAGS} ${Y2P_OBJS} ${Y2P_LDFLAGS} -o $@
+
+${PSNRHVS_TARGET}: ${PSNRHVS_OBJS}
+	${CC} ${CFLAGS} ${PSNRHVS_OBJS} ${PSNRHVS_LDFLAGS} -o $@
 
 ${PIM_TARGET}: ${PIM_OBJS}
 	${CC} ${CFLAGS} ${PIM_OBJS} ${PIM_LDFLAGS} -o $@
