Makes block_size_analysis.c optionally use the online decision.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -81,6 +81,7 @@ PSNRHVS_TARGET:=dump_psnrhvs
 #block_size_analysis
 BSIZE_LOCAL_CSOURCES = \
 block_size_analysis.c \
+block_size.c \
 vidinput.c \
 newdct.c \
 filter.c
