Rewrite of the encoding of exponential distributions
The new code generally encodes a single entropy-coded symbol rather
than 5 binary symbols. The table is based on the decay factor rather
than the expectation.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -272,9 +272,23 @@ GEN_CDF_CSOURCES:=${GEN_CDF_LOCAL_CSOURCES} \
  ${GEN_CDF_LOCAL_CSOURCES:%=${LIBSRCDIR}/%}
 GEN_CDF_TARGET:=gen_cdf
 
+#gen_laplace_tables
+GEN_LAPLACE_TABLES_LOCAL_CSOURCES = \
+gen_laplace_tables.c
+
+GEN_LAPLACE_TABLES_LIB_CSOURCES =
+
+GEN_LAPLACE_TABLES_LDFLAGS = -lm
+
+GEN_LAPLACE_TABLES_OBJS:=${GEN_LAPLACE_TABLES_LOCAL_CSOURCES} ${GEN_LAPLACE_TABLES_LIB_CSOURCES}
+GEN_LAPLACE_TABLES_OBJS:=${GEN_LAPLACE_TABLES_OBJS:%.c=${WORKDIR}/%.o}
+GEN_LAPLACE_TABLES_CSOURCES:=${GEN_LAPLACE_TABLES_LOCAL_CSOURCES} \
+ ${GEN_LAPLACE_TABLES_LOCAL_CSOURCES:%=${LIBSRCDIR}/%}
+GEN_LAPLACE_TABLES_TARGET:=gen_laplace_tables
+
 
 ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PSNRHVS_OBJS} ${PIM_OBJS} ${IIM_OBJS} ${IIX_OBJS} \
- ${GEN_CDF_OBJS} ${IS_OBJS} ${IP_OBJS} ${T_OBJS} ${T2D_OBJS} ${BSIZE_OBJS}
+ ${GEN_CDF_OBJS} ${GEN_LAPLACE_TABLES_OBJS} ${IS_OBJS} ${IP_OBJS} ${T_OBJS} ${T2D_OBJS} ${BSIZE_OBJS}
 
 ALL_ASMS:=${ALL_OBJS:%.o=%.s}
 
@@ -282,7 +296,7 @@ ALL_DEPS:=${ALL_OBJS:%.o=%.d}
 
 ALL_TARGETS:=${P2Y_TARGET} ${Y2P_TARGET} ${PSNRHVS_TARGET} \
  ${PIM_TARGET} ${IIM_TARGET} ${IIX_TARGET} ${GEN_CDF_TARGET} \
- ${IS_TARGET} ${IP_TARGET} ${T_TARGET} ${T2D_TARGET} \
+ ${GEN_LAPLACE_TABLES_TARGET} ${IS_TARGET} ${IP_TARGET} ${T_TARGET} ${T2D_TARGET} \
  ${BSIZE_TARGET}
 
 all: ${ALL_TARGETS}
@@ -331,6 +345,9 @@ ${IIX_TARGET}: ${IIX_OBJS}
 
 ${GEN_CDF_TARGET}: ${GEN_CDF_OBJS}
 	${CC} ${CFLAGS} ${GEN_CDF_OBJS} ${GEN_CDF_LDFLAGS} -o $@
+
+${GEN_LAPLACE_TABLES_TARGET}: ${GEN_LAPLACE_TABLES_OBJS}
+	${CC} ${CFLAGS} ${GEN_LAPLACE_TABLES_OBJS} ${GEN_LAPLACE_TABLES_LDFLAGS} -o $@
 
 ${ALL_OBJS} ${ALL_ASMS} ${ALL_DEPS} ${ALL_TARGETS}: Makefile
 
