Refactoring intra_stats and intra_pred

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -134,6 +134,7 @@ IIM_TARGET:=init_intra_maps
 IS_LOCAL_CSOURCES = \
 intra_stats.c \
 intra_fit_tools.c \
+od_covmat.c \
 stats_tools.c \
 stats_data.c \
 vidinput.c \
@@ -157,6 +158,7 @@ IS_TARGET:=intra_stats
 IP_LOCAL_CSOURCES = \
 intra_pred.c \
 intra_fit_tools.c \
+od_covmat.c \
 stats_tools.c \
 stats_data.c \
 vidinput.c \
@@ -183,6 +185,7 @@ T_LOCAL_CSOURCES = \
 trans.c \
 intra_fit_tools.c \
 vidinput.c \
+od_covmat.c \
 stats_tools.c \
 stats_data.c \
 trans_tools.c \
@@ -210,6 +213,7 @@ T2D_LOCAL_CSOURCES = \
 trans2d.c \
 intra_fit_tools.c \
 vidinput.c \
+od_covmat.c \
 stats_tools.c \
 stats_data.c \
 trans_tools.c \
