Misc. cleanups: asserts in /tools/, unused var in newdct, disable intra RDO.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -29,6 +29,7 @@ CFLAGS = -Wall -Wno-parentheses -Wno-overlength-strings -Wno-long-long
 CFLAGS += -std=c89 -pedantic -fopenmp
 CFLAGS += -O3
 CFLAGS += -g
+CFLAGS += -DOD_ENABLE_ASSERTIONS
 
 LIBSRCDIR=../src
 WORKDIR=build
